updated project page

--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Projects</title>
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
@@ -23,7 +23,7 @@
 <body>
     <nav>
         <div class="nav-wrapper blue">
-            <a href="" class="center brand-logo withe-text" style="text-shadow: 0px 0px 20p">Hani</a>
+            <a href="" class="center brand-logo withe-text" style="text-shadow: 0px 0px 20p">My Projects</a>
             <ul class=" hide-on-med-and-down">
                 <li><a href="index.html"><i class="material-icons left">face</i>About Me</a></li>
                 <li><a href="projects.html"><i class="material-icons left">work</i>Projects</a></li>
@@ -118,6 +118,29 @@
 
         </div>
     </div>
+    <footer class="page-footer light-blue">
+            <div class="container">
+              <div class="row">
+                <div class="col l6 s12">
+                  <h5 class="white-text">Hani</h5>
+                  <p class="grey-text text-lighten-4">NorthWestern Bootcamp</p>
+                </div>
+                <div class="col l4 offset-l2 s12">
+                  <h5 class="white-text">Social Media</h5>
+                  <ul>
+                    <li><a class="grey-text text-lighten-3" href="#!">Facebook</a></li>
+                    <li><a class="grey-text text-lighten-3" href="#!">LinkedIn</a></li>
+
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="footer-copyright">
+              <div class="container">
+              © 2019 Copyright Text
+              </div>
+            </div>
+          </footer>
     <script src="assets/javascript/index.js"></script>
 </body>
 
