contact.html updated

--- a/projects.html
+++ b/projects.html
@@ -60,7 +60,7 @@
     <div class="row">
      
         <div class="col m2 hide-on-small-only"></div>
-        <div class="col s12 m8 column">
+        <div class="col s12 m8">
               <a target="blank" href="https://matthewheimark.github.io/project1/index.html"> <h1 class="center" style="    font-size: 2em;
                 font-weight: bold;
                 color: darkslategrey;">1.SRSLY</h1></a> 
