--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     
   <div class="row">
       <div class="col s0 m2"></div>
-        <div class="col s12 m8 column">
+        <div class="col s12 m8 ">
             
           <div class="card">
               <div class="row">
